# babyagi

./: CryptoNews.yaml  baby_custom_agi.py  babyagi.py  config.yaml  create_epics.py  create_stories.py  create_tasks.py  epic.yaml  epics.yaml  jira_output.csv  output.csv  pyproject.toml  stories.yaml  tasks.yaml  tasks_old.yaml  yaml2csv.py  yaml2jira.py
classes/: __init__.py  classes.py
extensions/: pinecone_storage.py
functions/: functions.py
model/: __init__.py  lama.py
storage/: __init__.py  chromadb.py  task_storage.py
