[tool.poetry]
name = "babyagi"
version = "0.1.0"
description = ""
authors = ["Rafal Plis <rplis@pmintl.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "1.4.0"
openai = "0.27.4"
chromadb = "0.4.6"
pre-commit = ">=3.2.0"
python-dotenv = "1.0.0"
tiktoken = "0.3.3"
llama-cpp-python = ">=0.1.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
